hphp/test/zend/good/ext/gd/tests/imagefilter_error6.php
<?php
$image = tmpfile();

var_dump(imagefilter($image, IMG_FILTER_SMOOTH, 3.0));
?>