hphp/test/zend/bad/ext-gd/imagefilter_error17.php
<?php
$image = tmpfile();

var_dump(imagefilter($image, IMG_FILTER_GRAYSCALE));
?>